--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,14 @@
+dist: trusty
+
+language: bash
+
+addons:
+  apt:
+    sources:
+      - debian-sid
+    packages:
+      - shellcheck
+
 before_script:
   - wget https://git.zx2c4.com/password-store/snapshot/password-store-1.7.tar.xz
   - tar -xvf password-store-1.7.tar.xz
