--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,9 @@ addons:
 before_script:
   - wget https://git.zx2c4.com/password-store/snapshot/password-store-1.7.tar.xz
   - tar -xvf password-store-1.7.tar.xz
-  - export PATH=$PATH:$PWD/password-store-1.7/src
+  - ln -s password-store-1.7/src/password-store.sh pass
+  - export PATH=$PATH:.
+  - export TEST_OPTS="-v"
 
 install: true
 
