--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ dist: trusty
 
 language: bash
 
+env:
+  - PASS_VERSION=1.7
+  - PASS_VERSION=master
+
 addons:
   apt:
     sources:
@@ -12,9 +16,9 @@ addons:
       - shellcheck
 
 before_script:
-  - wget https://git.zx2c4.com/password-store/snapshot/password-store-1.7.tar.xz
-  - tar -xvf password-store-1.7.tar.xz
-  - ln -s password-store-1.7/src/password-store.sh pass
+  - wget https://git.zx2c4.com/password-store/snapshot/password-store-$PASS_VERSION.tar.xz
+  - tar -xvf password-store-$PASS_VERSION.tar.xz
+  - ln -s password-store-$PASS_VERSION/src/password-store.sh pass
   - export PATH=$PATH:.
   - export TEST_OPTS="-v"
 
