--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 dist: trusty
+sudo: false
 
 language: bash
 
@@ -8,21 +9,30 @@ env:
 
 addons:
   apt:
-    sources:
-      - debian-sid
     packages:
+      - cabal-install
       - expect
+      - ghc
       - oathtool
-      - shellcheck
 
 before_script:
   - wget https://git.zx2c4.com/password-store/snapshot/password-store-$PASS_VERSION.tar.xz
   - tar -xvf password-store-$PASS_VERSION.tar.xz
   - ln -s password-store-$PASS_VERSION/src/password-store.sh pass
+  - cabal update
+  - cabal install ShellCheck
+  - ln -s "${HOME}/.cabal/bin/shellcheck" shellcheck
   - export PATH=$PATH:.
   - export TEST_OPTS="-v"
 
 install: true
+
+before_cache:
+  - rm $HOME/.cabal/logs/build.log
+
+cache:
+  directories:
+    - $HOME/.cabal
 
 script:
   - make lint
